--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicons" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web Portal - Ingenium Technologies - Sidhant Dhar" />
@@ -11,6 +11,17 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <script>
+      var full = window.location.host; // subdomain.domain.com
+      var parts = full.split('.');
+      var sub = parts[0];
+      link = document.createElement('link');
+      link.href = 'http://13.126.247.152:3000' + sub;
+      console.log(link.href, 'manifest link');
+      link.rel = 'manifest';
+      document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
