completed course module

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicons" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web Portal - Ingenium Technologies - Empowering Coaching Institutes - Digital Transformation -  Sidhant Dhar" />
+    <meta
+      name="description"
+      content="Web Portal - Ingenium Technologies - Empowering Coaching Institutes - Digital Transformation -  Sidhant Dhar"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -15,9 +18,7 @@
     <script>
       const full = window.location.host; // subdomain.domain.com
       const testDomain = 'ingenium.surge.sh';
-      const serverURL =  process.env.NODE_ENV === 'development'
-          ? 'http://13.126.247.152:3000'
-          : 'https://class.ingeniumedu.com';
+      const serverURL = 'https://class.ingeniumedu.com';
       const fullURL = `${serverURL}/getManifestDataOfClient?domain_name=${full}`;
       console.log(fullURL);
       fetch(fullURL)
