--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,16 @@
       content="Web Portal - Ingenium Technologies - Empowering Coaching Institutes - Digital Transformation -  Sidhant Dhar"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!--
+      <link rel="preload" as="font" href="%PUBLIC_URL%/media/logo192.png">
+      <link rel="preload" as="font" href="%PUBLIC_URL%/media/192.png" crossorigin="anonymous"> -->
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-----------------------------SCRIPT TO LOAD DYNAMIC MANIFEST------------------------------------------------------->
-    <script>
+    <script async>
       const full = window.location.host; // subdomain.domain.com
       const testDomain = 'ingenium.surge.sh';
       const serverURL = 'https://class.ingeniumedu.com';
