Added scrollable responsiveness to coursecards

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-----------------------------SCRIPT TO LOAD DYNAMIC MANIFEST------------------------------------------------------->
-    <script async>
+    <!-- <script async>
       const full = window.location.host; // subdomain.domain.com
       const testDomain = 'ingenium.surge.sh';
       const serverURL = 'https://class.ingeniumedu.com';
@@ -42,7 +42,7 @@
           const manifestURL = URL.createObjectURL(blob);
           document.querySelector('#dynamic-manifest').setAttribute('href', manifestURL);
         });
-    </script>
+    </script> -->
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" id="default-manifest" />
     <!--
