--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       name="description"
       content="Web Portal - Ingenium Technologies - Empowering Coaching Institutes - Digital Transformation -  Sidhant Dhar"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"  id='apple-icon'/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" id="apple-icon" />
     <!--
       <link rel="preload" as="font" href="%PUBLIC_URL%/media/logo192.png">
       <link rel="preload" as="font" href="%PUBLIC_URL%/media/192.png" crossorigin="anonymous"> -->
@@ -41,11 +41,10 @@
           const blob = new Blob([manifestData], { type: 'application/json' });
           const manifestURL = URL.createObjectURL(blob);
           document.querySelector('#dynamic-manifest').setAttribute('href', manifestURL);
-          console.log(resp.result.icons[1].src)
-          const appleLink = document.getElementById('apple-icon')
-          appleLink.href = resp.result.icons[1].src
+          console.log(resp.result.icons[1].src);
+          const appleLink = document.getElementById('apple-icon');
+          appleLink.href = resp.result.icons[1].src;
         });
-
     </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" id="default-manifest" />
@@ -76,12 +75,9 @@
 
     <input type="hidden" value="%NODE_ENV%" id="node_env_mode" />
     <script>
-      var mode = document.querySelector("#node_env_mode").value;
-      if (
-        mode === "production" &&
-        typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === "object"
-      ) {
-        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () { };
+      var mode = document.querySelector('#node_env_mode').value;
+      if (mode === 'production' && typeof window.__REACT_DEVTOOLS_GLOBAL_HOOK__ === 'object') {
+        window.__REACT_DEVTOOLS_GLOBAL_HOOK__.inject = function () {};
       }
     </script>
   </body>
