--- a/public/index.html
+++ b/public/index.html
@@ -23,28 +23,28 @@
     -->
     <!-----------------------------SCRIPT TO LOAD DYNAMIC MANIFEST------------------------------------------------------->
     <script async>
-      const full = window.location.host; // subdomain.domain.com
-      const testDomain = 'ingenium.surge.sh';
-      const serverURL = 'https://class.ingeniumedu.com';
-      const fullURL = `${serverURL}/getManifestDataOfClient?domain_name=${full}`;
-      console.log(fullURL);
-      fetch(fullURL)
-        .then((res) => res.json())
-        .then((resp) => {
-          link = document.createElement('link');
-          link.rel = 'manifest';
-          link.id = 'dynamic-manifest';
-          document.getElementsByTagName('head')[0].appendChild(link);
-          const currentManifest = document.querySelector('#default-manifest');
-          currentManifest.parentNode.removeChild(currentManifest);
-          const manifestData = JSON.stringify(resp.result);
-          const blob = new Blob([manifestData], { type: 'application/json' });
-          const manifestURL = URL.createObjectURL(blob);
-          document.querySelector('#dynamic-manifest').setAttribute('href', manifestURL); // manifestURL
-          console.log(resp.result.icons[1].src);
-          const appleLink = document.getElementById('apple-icon');
-          appleLink.href = resp.result.icons[1].src;
-        });
+      // const full = window.location.host; // subdomain.domain.com
+      // const testDomain = 'ingenium.surge.sh';
+      // const serverURL = 'https://class.ingeniumedu.com';
+      // const fullURL = `${serverURL}/getManifestDataOfClient?domain_name=${full}`;
+      // console.log(fullURL);
+      // fetch(fullURL)
+      //   .then((res) => res.json())
+      //   .then((resp) => {
+      //     link = document.createElement('link');
+      //     link.rel = 'manifest';
+      //     link.id = 'dynamic-manifest';
+      //     document.getElementsByTagName('head')[0].appendChild(link);
+      //     const currentManifest = document.querySelector('#default-manifest');
+      //     currentManifest.parentNode.removeChild(currentManifest);
+      //     const manifestData = JSON.stringify(resp.result);
+      //     const blob = new Blob([manifestData], { type: 'application/json' });
+      //     const manifestURL = URL.createObjectURL(blob);
+      //     document.querySelector('#dynamic-manifest').setAttribute('href', manifestURL); // manifestURL
+      //     console.log(resp.result.icons[1].src);
+      //     const appleLink = document.getElementById('apple-icon');
+      //     appleLink.href = resp.result.icons[1].src;
+      //   });
     </script>
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" id="default-manifest" />
