--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- for local host -->
 
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicons" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
