--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web Portal - Ingenium Technologies - Empowering Coaching Institutes - Digital Transformation -  Sidhant Dhar"
+      content="Web Portal - Empowering Coaching Institutes - Digital Transformation"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" id="apple-icon" />
     <!--
