--- a/public/index.html
+++ b/public/index.html
@@ -59,13 +59,14 @@
     -->
     <title>Ingenium Education</title>
     <meta property="og:title" content="__TITLE__" />
+
     <meta property="og:description" content="__DESCRIPTION__" />
     <meta property="og:image" content="__IMAGE__" />
     <meta property="og:url" content="__START_URL__" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <meta property="og:site_name" content="Ingenium Education" />
-    <meta name="twitter:image:alt" content="Sidhant Dhar" />
+    <meta name="twitter:image:alt" content="Priyam Khatri" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
