push update april 2022

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta id="metaColor" name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web Portal - Empowering Coaching Institutes - Digital Transformation"
