--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" id="dynamic-favicon" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <meta id="metaColor" name="theme-color" content="#000000" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta
       name="description"
       content="Web Portal - Empowering Coaching Institutes - Digital Transformation"
